--- a/subjectA.html
+++ b/subjectA.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>プロジェクト開発</title>
 </head>
 <body>
-    <h1></h1>
-    <li></li>
+    <h1>プロジェクト開発</h1>
+    <li> Git BashとGitHubを使用して行う授業。覚えるコマンドはたくさんあるが、覚えられると楽しい。</li>
+        <img src="img/github_PNG22.png" alt="GitHubのキャラ">
+   
 </body>
 </html>
