--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="img/jyobijyobi.png" alt="ジョビジョビくん">
-    <a href="#">科目1</a>
+    <a href="subjectA.html">プロジェクト開発</a>
     <a href="#">科目2</a>
 </body>
 </html>
